Remove useless dependency on commons-codec (#2)