@@ -1,5 +1,14 @@
 package me.desair.tus.server.util;
 
+import me.desair.tus.server.HttpHeader;
+import me.desair.tus.server.TusExtension;
+import me.desair.tus.server.checksum.ChecksumAlgorithm;
+import org.apache.commons.io.input.CountingInputStream;
+import org.apache.commons.lang3.StringUtils;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletRequestWrapper;
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.security.DigestInputStream;
@@ -10,16 +19,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletRequestWrapper;
-
-import me.desair.tus.server.HttpHeader;
-import me.desair.tus.server.TusExtension;
-import me.desair.tus.server.checksum.ChecksumAlgorithm;
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.io.input.CountingInputStream;
-import org.apache.commons.lang3.StringUtils;
 
 public class TusServletRequest extends HttpServletRequestWrapper {
 
@@ -88,7 +87,7 @@ public class TusServletRequest extends HttpServletRequestWrapper {
     public String getCalculatedChecksum(ChecksumAlgorithm algorithm) {
         MessageDigest messageDigest = getMessageDigest(algorithm);
         return messageDigest == null ? null :
-                Base64.encodeBase64String(messageDigest.digest());
+                DatatypeConverter.printBase64Binary(messageDigest.digest());
     }
 
     private MessageDigest getMessageDigest(final ChecksumAlgorithm algorithm) {
